# wf-airtable-api

./: .env.example  .gitignore  Pipfile  README.md  justfile  package-lock.json  package.json  pyproject.toml  serverless.yml
app/: __main__.py  auth.py  const.py  main.py  model.py  router_auto_response_email_templates.py  router_educators.py  router_educators_schools.py  router_geo_area_mapping.py  router_hubs.py  router_location_contacts.py  router_partners.py  router_pods.py  router_schools.py  router_ssj_fillout.py  router_ssj_typeforms.py
app/airtable/: api.py  attachment.py  client.py  educators.py  educators_schools.py  formulas.py  guides_schools.py  hubs.py  languages.py  montessori_certifications.py  partners.py  pods.py  response.py  schools.py  socio_economic_backgrounds.py  validators.py
app/airtable/base_map_by_geographic_area/: auto_response_email_template.py  const.py  geo_area_contacts.py  geo_area_target_communities.py  geo_areas.py
app/airtable/base_school_db/: __init__.py  const.py  contact_info.py  educators.py  educators_schools.py  field_categories.py  field_mapping.py  fillout_get_involved.py  guides_schools.py  hubs.py  languages.py  montessori_certifications.py  newsletters.py  partners.py  pods.py  schools.py  socio_economic_backgrounds.py  typeform_start_a_school.py
app/airtable/base_ssj_typeform_responses/: const.py  start_a_school.py
app/airtable/base_start_school_first_contact/: const.py  location_contacts.py
app/geocode/: geocode_models.py  google_maps_client.py  utils.py
app/models/: auto_response_email_template.py  educators.py  educators_schools.py  geo_area_contacts.py  geo_area_target_communities.py  geo_areas.py  guides_schools.py  hubs.py  languages.py  location_contacts.py  montessori_certifications.py  partners.py  pods.py  response.py  schools.py  ssj_fillout_get_involved.py  ssj_typeform_start_a_school.py  target_communities.py
app/utils/: utils.py
