[tool.poetry]
name = "wf-airtable-api"
version = "1.12.0"
description = "Wildflower API serving to simplify Airtable interface"
authors = ["Benjamin Jaffe-Talberg <ben.talberg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Shapely = "^2.0.4"
cachetools = ">=5.0.0"
fastapi = ">=0.75.0"
googlemaps = ">=4.6.0"
haversine = ">=2.5.1"
mangum = ">=0.14.1"
pyAirtable = '>=1.1.0'
pyjwt = {extras = ["crypto"], version = ">=2.3.0"}
python-jose = ">=3.3.0"
uvicorn = ">=0.17.5"
wf-airtable-api-client = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
pytest = '>=6.2.2'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'